--- a/static/html/events.html
+++ b/static/html/events.html
@@ -17,7 +17,7 @@
         <p>
             Create new schedule
         </p>
-        <form id="new-post">
+        <form id="new-post" method="POST">
             Name <input type="text" name="name"><br>
             Duration <input type="integer" name="duration"><br>
             Note <input type="text" name="note"><br>
