--- a/static/html/items.html
+++ b/static/html/items.html
@@ -17,7 +17,7 @@
         <p>
             Create new event
         </p>
-        <form id="new-post">
+        <form id="new-post" method="POST">
             Name <input type="text" name="name"><br>
             Value <input type="number" name="value"><br>
             <input type="submit" value="Submit" name="submit">
