--- a/static/html/schedules.html
+++ b/static/html/schedules.html
@@ -14,7 +14,7 @@
         <p>
             Create new schedule
         </p>
-        <form id="new-post">
+        <form id="new-post" method="POST" action='/diary/schedules/'>
             Name <input type="text" name="name"><br>
             Start time <input type="datetime-local" name="start_time"><br>
             End time <input type="datetime-local" name="end_time"><br>
