--- a/static/html/tasks.html
+++ b/static/html/tasks.html
@@ -11,13 +11,13 @@
 
 <body>
     <div class="navigation">
-        
+
     </div>
     <div class="form-post">
         <p>
             Create new schedule
         </p>
-        <form id="new-post">
+        <form id="new-post" method="POST">
             Name <input type="text" name="name"><br>
             Priority <input type="integer" name="priority"><br>
             Goal <input type="text" name="goal"><br>
@@ -34,7 +34,7 @@
                 </tr>
             </thead>
             <tbody>
-                
+
             </tbody>
         </table>
     </div>
