--- a/diary/static/html/items.html
+++ b/diary/static/html/items.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8" />
     <!-- <link rel="stylesheet" type="text/css" href="/static/css/admin.css"> -->
     <title>Diary</title>
-    <script type="text/javascript" src="/static/scripts/jquery.js"></script>
-    <script type="text/javascript" src="/static/scripts/schedules.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.js"></script>
+    <script type="text/javascript" src="/static/js/utils.js"></script>
+    <script type="text/javascript" src="/static/js/schedules.js"></script>
 </head>
 
 <body>
