--- a/diary/static/html/schedules.html
+++ b/diary/static/html/schedules.html
@@ -5,22 +5,20 @@
     <meta charset="utf-8" />
     <!-- <link rel="stylesheet" type="text/css" href="/static/css/admin.css"> -->
     <title>Diary</title>
-    <script type="text/javascript" src="/static/scripts/jquery.js"></script>
-    <script type="text/javascript" src="/static/scripts/schedules.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.js"></script>
+    <script type="text/javascript" src="/static/js/utils.js"></script>
+    <script type="text/javascript" src="/static/js/schedules.js"></script>
 </head>
 
 <body>
-    <div class="navigation">
-
-    </div>
     <div class="form-post">
         <p>
             Create new schedule
         </p>
-        <form id="new-post" method="POST">
+        <form id="new-post" method="POST" action='/diary/schedules/'>
             Name <input type="text" name="name"><br>
-            Duration <input type="integer" name="duration"><br>
-            Note <input type="text" name="note"><br>
+            Start time <input type="datetime-local" name="start_time"><br>
+            End time <input type="datetime-local" name="end_time"><br>
             <input type="submit" value="Submit" name="submit">
         </form>
     </div>
@@ -29,12 +27,15 @@
             <thead>
                 <tr>
                     <th>Name</th>
-                    <th>Duration</th>
-                    <th>Note</th>
+                    <th>Start time</th>
+                    <th>End time</th>
+                    <th>Events</th>
+                    <th>Items</th>
+                    <th>Tasks</th>
                 </tr>
             </thead>
             <tbody>
-
+                
             </tbody>
         </table>
     </div>
