Render items and schedules to view

--- a/diary/static/html/schedules.html
+++ b/diary/static/html/schedules.html
@@ -23,7 +23,7 @@
         </form>
     </div>
     <div class="tablecontents">
-        <table>
+        <table class="resulttable">
             <thead>
                 <tr>
                     <th>Name</th>
