--- a/diary/static/html/items.html
+++ b/diary/static/html/items.html
@@ -7,16 +7,17 @@
     <title>Diary</title>
     <script type="text/javascript" src="/static/js/jquery.js"></script>
     <script type="text/javascript" src="/static/js/utils.js"></script>
-    <script type="text/javascript" src="/static/js/schedules.js"></script>
+    <script type="text/javascript" src="/static/js/items.js"></script>
 </head>
 
 <body>
     <div class="navigation">
-
+        <a id="event-link" href="">Events</a>
+        <a id="task-link" href="">Tasks</a>
     </div>
     <div class="form-post">
         <p>
-            Create new event
+            Create new item
         </p>
         <form id="new-post" method="POST">
             Name <input type="text" name="name"><br>
@@ -25,7 +26,7 @@
         </form>
     </div>
     <div class="tablecontents">
-        <table>
+        <table class="resulttable">
             <thead>
                 <tr>
                     <th>Name</th>
