Delete added editing table cells possible, need to make add PATCH hook to it

--- a/diary/static/html/items.html
+++ b/diary/static/html/items.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="navigation">
+        <a id="schedules-collection" href="">Collection</a>
         <a id="event-link" href="">Events</a>
         <a id="task-link" href="">Tasks</a>
     </div>
@@ -31,6 +32,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Value</th>
+                    <!-- <th>DELETE</th> -->
                 </tr>
             </thead>
             <tbody>
