--- a/diary/static/html/tasks.html
+++ b/diary/static/html/tasks.html
@@ -7,31 +7,34 @@
     <title>Diary</title>
     <script type="text/javascript" src="/static/js/jquery.js"></script>
     <script type="text/javascript" src="/static/js/utils.js"></script>
-    <script type="text/javascript" src="/static/js/schedules.js"></script>
+    <script type="text/javascript" src="/static/js/tasks.js"></script>
 </head>
 
 <body>
     <div class="navigation">
-
+        <a id="schedules-collection" href="">View schedules</a>
+        <a id="event-link" href="">Events</a>
+        <a id="item-link" href="">Items</a>
     </div>
     <div class="form-post">
         <p>
-            Create new schedule
+            Add new task to schedule
         </p>
         <form id="new-post" method="POST">
             Name <input type="text" name="name"><br>
-            Priority <input type="integer" name="priority"><br>
+            Priority <input type="number" name="priority"><br>
             Goal <input type="text" name="goal"><br>
             <input type="submit" value="Submit" name="submit">
         </form>
     </div>
     <div class="tablecontents">
-        <table>
+        <table class="resulttable">
             <thead>
                 <tr>
                     <th>Name</th>
                     <th>Priority</th>
                     <th>Goal</th>
+                    <th>Result</th>
                 </tr>
             </thead>
             <tbody>
